# AtoZ-Jobs-AI

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  GATES.md  GLOSSARY.md  PLAYBOOK.md  README.md  SPEC.md  STATUS.md  justfile
.claude/: settings.json
.claude/agents/: architecture-reviewer.md  ci-workflow-team.md  debugger.md  dependency-auditor.md  deploy-gate-team.md  diagnostics-team.md  migration-deployer.md  performance-auditor.md  review-team.md  secret-rotator.md  security-auditor.md  status-reporter.md  tdd-enforcer.md  verification-team.md
.claude/commands/: deploy.md  fix-issue.md  pr-review.md
.claude/hooks/: block-secret-rotation.sh  post-dependency-audit.sh  pre-migration-reminder.sh
.claude/rules/: ci-cd-rules.md  database-rules.md  frontend-rules.md  pipeline-rules.md  security-critical.md  test-standards.md
.github/workflows/: modal-deploy.yml  phase2-fetch-jobs.yml  phase2-seed.yml  phase3-deploy-cf.yml  phase3-lighthouse.yml
docs/: PHASE2_AUDIT_REPORT.md  STATUS.md  architecture.md
docs/adr/: 0001-embeddings-over-keyword-search.md  0002-rule-based-extraction-no-llm.md  0003-supabase-rls-for-multi-tenancy.md  0004-modal-serverless-compute.md  0005-cloudflare-pages-hosting.md
docs/phase-1/: GATES.md  PLAYBOOK.md  SPEC.md  STATUS.md
docs/phase-2/: PLAYBOOK.md  STATUS.md
docs/phase-3/: STATUS.md
docs/runbooks/: database-recovery.md  incident-response.md
docs/workflows/: deployment.md  local-development.md
pipeline/: CLAUDE.md  pyproject.toml
pipeline/src/: modal_app.py
pipeline/src/collectors/: adzuna.py  base.py  careerjet.py  circuit_breaker.py  free_apis.py  jooble.py  reed.py
pipeline/src/dedup/: fuzzy_matcher.py  minhash.py  orchestrator.py
pipeline/src/embeddings/: embed.py  fallback.py
pipeline/src/enrichment/: companies_house.py  orchestrator.py
pipeline/src/maintenance/: dlq.py  expiry.py  health.py
pipeline/src/models/: errors.py  job.py
pipeline/src/processing/: category.py  dedup.py  location.py  queue_runner.py  salary.py  seniority.py  summary.py
pipeline/src/profiles/: handler.py
pipeline/src/salary/: features.py  trainer.py
pipeline/src/search/: orchestrator.py  reranker.py
pipeline/src/skills/: dictionary.py  dictionary_builder.py  esco_api.py  esco_loader.py  extractor.py  populate.py  seed_esco.py  spacy_matcher.py
pipeline/src/tests/: e2e_pipeline.py  gate1_checks.py  gate234_checks.py  phase2_gate_checks.py  test_adzuna_collector.py  test_careerjet_collector.py  test_category_mapper.py  test_circuit_breaker.py  test_companies_house.py  test_dedup.py  test_dedup_orchestrator.py  test_dictionary_builder.py  test_dlq.py  test_embeddings.py  test_enrichment_orchestrator.py  test_esco_api.py  test_esco_loader.py  test_expiry.py  test_free_apis_collector.py  test_fuzzy_matcher.py  test_health.py  test_jooble_collector.py  test_location_normalizer.py  test_minhash.py  test_populate.py  test_profile_handler.py  test_queue_runner.py  test_reed_collector.py  test_reranker.py  test_salary_features.py  test_salary_normalizer.py  test_salary_trainer.py  test_search.py  test_search_orchestrator.py  test_search_quality.py  test_seniority.py  test_skill_extractor.py  test_spacy_matcher.py  test_structured_summary.py
pipeline/src/tests/fixtures/: adzuna_response.json  careerjet_response.json  esco_sample.csv  free_apis_responses.json  jooble_response.json  reed_response.json
scripts/: apply_ddl.sql  apply_ddl_part2.sql  apply_missing_migrations.py
supabase/: CLAUDE.md  config.toml  seed.sql
supabase/migrations/: 20260301000001_extensions.sql  20260301000001_extensions_down.sql  20260301000002_core_tables.sql  20260301000002_core_tables_down.sql  20260301000003_indexes.sql  20260301000003_indexes_down.sql  20260301000004_queues_cron_health.sql  20260301000004_queues_cron_health_down.sql  20260301000005_rls_policies.sql  20260301000005_rls_policies_down.sql  20260301000006_uk_cities.sql  20260301000006_uk_cities_down.sql  20260301000007_uk_cities_rls.sql  20260301000007_uk_cities_rls_down.sql  20260301000008_search_jobs.sql  20260301000008_search_jobs_down.sql  20260301000009_add_pipeline_columns.sql  20260301000009_add_pipeline_columns_down.sql  20260301000010_skills_taxonomy.sql  20260301000010_skills_taxonomy_down.sql  20260301000011_advanced_dedup.sql  20260301000011_advanced_dedup_down.sql  20260301000012_salary_company.sql  20260301000012_salary_company_down.sql  20260301000013_user_profiles_search_v2.sql  20260301000013_user_profiles_search_v2_down.sql  20260301000014_phase2_rls.sql  20260301000014_phase2_rls_down.sql  20260301000015_find_fuzzy_duplicates.sql  20260301000015_find_fuzzy_duplicates_down.sql  20260301000016_add_category_raw_contract_type.sql  20260301000016_add_category_raw_contract_type_down.sql  20260301000017_pgmq_permissions.sql  20260301000017_pgmq_permissions_down.sql  20260301000018_ai_audit_log.sql  20260301000018_ai_audit_log_down.sql  20260301000019_search_facets.sql  20260301000019_search_facets_down.sql
web/: .env.example  CLAUDE.md  eslint.config.mjs  lighthouserc.js  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  vitest.config.ts  wrangler.toml
web/__tests__/: accessibility.test.tsx  ai-disclosure.test.tsx  audit-log.test.ts  budget-guard.test.ts  components.test.tsx  explain-route.test.ts  filter-components.test.tsx  job-detail.test.tsx  layout.test.tsx  (+9 more)
(+69 files in other folders)
